revert to original image, resolve missing toggler on mobile device, remove unwanted code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,6 @@ body {
 }
 /* NavBar */
 
-.navbar navbar-toggler-icon {
-	color:white;
-}
-
 .navbar {
 	overflow: hidden;
 	background-color: #b42424;
@@ -30,28 +26,27 @@ body {
 	float: right;
 }
 
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: rgb(225, 248, 94);
+}
+
 .navbar-brand {
 	color: white;
 }
 
-.nav-link {
-	color: white;
-}
-
-.nav-link:hover {
-	color:rgb(225, 248, 94);
-}
-
-.navbar-brand:hover {
+.navbar-dark .navbar-brand:hover {
 	color: rgb(225, 248, 94);
-
 }
 
 /* Hero Section */
 
 .jumbotron-section {
-	height: 600px;
-	background: url(../images/steppedup6.jpg) no-repeat;
+	height: 120vh;
+	background: url(../images/steppedup5.jpg) no-repeat;
 	background-size: cover;
 	background-position: center;
 	display: -webkit-box;
@@ -72,7 +67,7 @@ body {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	height: 600px;
+	height: 120vh;
 	width: 100%;
 	opacity: 1;
 	-webkit-transition: .5s ease;
@@ -98,6 +93,7 @@ body {
 .btn {
 	font-weight: 700;
 }
+/* Fixtues Section - Card background colours */
 
 .red {
 	background-color: red;
@@ -233,34 +229,6 @@ body {
 	padding: 80px 0px 10px;
 }
 
-
-
-/* Directions Section */
-
-.opponentsbadges {
-	padding-bottom: 100px;
-}
-
-#direction-section h2 {
-	padding: 80px 0px 10px;
-}
-
-.opponentsbadges img {
-	width: 75px;
-	height: 75px;
-	-o-object-fit: scale-down;
-	   object-fit: scale-down;
-}
-
-.opponentsbadges img:hover {
-	width: 100px;
-	height: 100px;
-}
-/*-------------half time section-----------------------------------------*/
-
-#half-time h2 {
-	padding: 80px 0px 10px;
-}
 /*-------------contact section-----------------------------------------*/
 
 #contact-section h2 {
